comment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: gutanbug53/cloudproject-comment:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  type: LoadBalancer
  selector:
    app: comment-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8080
