common-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-service
  template:
    metadata:
      labels:
        app: common-service
    spec:
      containers:
      - name: common-service
        image: gutanbug53/cloudproject-common:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: common-service
spec:
  selector:
    app: common-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
